# CrawlingLeg

./: README.md  pyproject.toml
event_camera_simulator/: README.md  __init__.py  config.py  events.py  scenes.py  simulator.py  visualization.py
examples/: demo_event_simulation.py
main/: main.ino
tests/: test_event_simulator.py
